@@ -1,6 +1,10 @@
 2012-12-18  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
 	* src/yarpscope/src/PortReader.cpp: Connect using temporary
 	  ports
+	* src/yarpscope/src/CMakeLists.txt
+	  src/yarpscope/src/SimpleLoader.cpp
+	  src/yarpscope/src/SimpleLoader.h
+	  src/yarpscope/src/main.cpp: Add simple mode (command line)
 
 2012-12-17  Paul Fitzpatrick  <paul@robotrebuilt.com>
 
